# siem-recipes

./: README.md
local-siem/: Cargo.toml  querys.db
local-siem/src/: main.rs
